Chore. Update main.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kommandant",
   "version": "0.0.1",
   "description": "Stimulus controllers for the Kommandant gem",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
